# rfq-market-maker

./: .dockerignore  .env.example  Dockerfile  README.md  env.example  run.sh  supervisord.conf
price-client/: .gitignore  .prettierrc.yml  package-lock.json  package.json  tokens.json
price-client/src/: main.ts
signature/: Cargo.toml
signature/src/: main.rs
ws-client/: package-lock.json  package.json  tsconfig.json
ws-client/src/: main.ts
ws-client/src/config/: config.const.ts  config.interface.ts  config.service.ts  index.ts
ws-client/src/helpers/: getExchange.ts  getLastBlock.ts  getNonce.ts  index.ts
ws-client/src/price/: price.interface.ts  price.service.ts
ws-client/src/services/: index.ts
ws-client/src/services/interface/: api.interface.ts
ws-client/src/services/services/: api.service.ts  index.ts  lastBlock.service.ts
ws-client/src/signature/: index.ts  signature.interface.ts  signature.service.ts
ws-client/src/ws-client/: index.ts  ws.client.ts  ws.handler.ts  ws.interface.ts
