[package]
name = "aleo-sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
aleo-rust = "0.5.5"
anyhow = "1.0.72"
once_cell = "1.18.0"
# snarkvm = "0.14.6"
snarkvm-console-types = "0.14.6"
snarkvm-circuit = "0.14.6"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
rand = "0.8"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]